Fix button spacing on datagrid top

--- a/less/modules/datagrid.less
+++ b/less/modules/datagrid.less
@@ -183,10 +183,12 @@
 	.btn {
 		width: 220px;
 		margin-right: 16px;
-		margin-bottom: 16px;
 		&:nth-child(3n) {
 			margin-right: 0;
 		}
+	}
+	> .btn, > .btn-group {
+		margin-bottom: 16px;
 	}
 	.dropdown-menu {
 		width: 220px;
